--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,16 +5,11 @@
 
 version: 2
 updates:
-  - package-ecosystem: "" # See documentation for possible values
-    directory: "/" # Location of package manifests
-    schedule:
-      interval: "weekly"
-      
   # Maintain dependencies for npm
-  - package-ecosystem: "npm"
-    directory: "/"
+  - package-ecosystem: 'npm'
+    directory: '/'
     schedule:
-      interval: "daily"
+      interval: 'daily'
     commit-message:
       # Prefix all commit messages with "ci: "
-      prefix: "ci: "
+      prefix: 'ci: '
